# yield-agent

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
agent/: memory.md  package.json  tsconfig.json
agent/gateway/: router.ts  server.ts  x402.ts
agent/jobs/: crawler.ts
agent/lib/: connectors.ts  db.ts  defillama.ts  erc8004-client.ts  gemini.ts  goplus.ts  html-generator.ts  ipfs.ts  level-detector.ts  memory.ts  notify.ts  scoring.ts  tools.ts
agent/scripts/: debug-models.ts  test-ai.ts  test-db.ts  verify-env.ts
agent/skills/: daily-brief.ts  market-research.ts  news.ts  register-agent.ts  trust-stamp.ts  tutor-mode.ts  vault.ts  wallet-control.ts  yield-hunter.ts
agent/skills/daily-brief/: SKILL.md
agent/skills/market-research/: SKILL.md
agent/skills/trust-stamp/: SKILL.md
agent/skills/tutor-mode/: SKILL.md
agent/skills/wallet-control/: SKILL.md
contracts/: hardhat.config.ts  package.json  tsconfig.json
contracts/contracts/: AgentVault.sol  IdentityRegistry.sol  ReputationRegistry.sol  YieldManager.sol
contracts/contracts/interfaces/: IIdentityRegistry.sol  IReputationRegistry.sol
contracts/contracts/mocks/: MockERC20.sol
contracts/scripts/: deploy.ts  register-agent.ts
contracts/test/: AgentVault.test.ts  IdentityRegistry.test.ts  ReputationRegistry.test.ts  YieldManager.test.ts
infra/: ec2-setup.sh  openclaw.json
scripts/: local-dev.sh  verify-agent.ts
stylus/: Cargo.toml
stylus/src/: lib.rs
web/: package.json
web/src/app/: layout.tsx  page.tsx  (+1 more)
(+33 files in other folders)
