[package]
name = "yield-router"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
stylus-sdk = "0.10.0"
alloy-primitives = "0.8.19"
alloy-sol-types = "0.8.19"

[features]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "yield-router-bin"
path = "src/main.rs"


[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
